n8n-gke-autopilot/gateway/n8n-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: redirect-route
  namespace: gateway
spec:
  parentRefs:
  - namespace: gateway
    name: external-gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
